--- a/data-analyst/index.html
+++ b/data-analyst/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ahmed El-Sayed | Data - Science - Viz</title>
+  <title>Ahmed El-Sayed | Data - Science - Visualisation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description"
     content="Welcome to Ahmed El-Sayed's homepage. I'm a I'm a data analysis and visualisation enthousiast with a background in biology.">
@@ -20,7 +20,7 @@
   <meta property="og:type" content="website" />
 
   <!-- Bootstrap core CSS -->
-  <link href="asset/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="asset/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet" type="text/css">
@@ -31,13 +31,13 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="asset/css/agency.css" rel="stylesheet">
+  <link href="asset/agency.css" rel="stylesheet">
 
   <!-- Leaflet -->
-  <link rel="stylesheet" href="asset/leaflet@1.7.1/dist/leaflet.css"
+  <link rel="stylesheet" href="asset/leaflet.css"
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin="" />
-  <script src="asset/leaflet@1.7.1/dist/leaflet.js"
+  <script src="asset/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
 
@@ -128,8 +128,8 @@
   </header>
 
   <!-- scripts -->
-  <script src="asset/js/particles.js"></script>
-  <script src="asset/js/appHome.js"></script>
+  <script src="asset/particles.js"></script>
+  <script src="asset/appHome.js"></script>
 
   <!-- =======================  DESCRIPTION SECTION ======================= -->
 
@@ -295,13 +295,13 @@
           <h3 class="section-subheading text-muted text-center" style="max-width: 600px; line-height: 27px; margin-bottom: -30px;">"Dataviz Universe" is my newsletter where I share my latest dataviz updates. If you like charts, you will love my tips and tricks!</h3>
         </div>
         <div style="display: flex; justify-content: center; width: 100%;">
-          <script async data-uid="0ecbe576ff" src="asset/0ecbe576ff/index.js"></script>
+          <script async data-uid="0ecbe576ff" src="asset/index.js"></script>
         </div>
 
         <!-- Row 2 = all the testimonials -->
         <div style="overflow: hidden; width: 100%">
           <script
-            src="asset/widget/dbec7d0e-ac9b-4289-a216-ffef590a6039/platform.js"
+            src="asset/platform.js"
             type="text/javascript"
             async
 ></script>
@@ -450,7 +450,7 @@
           <p>I've developed a comprehensive <b>classification of chart types</b> based on their required data input format.</p>
           <p>This decision tree is available as a poster, which you can order <a href="https://www.data-to-viz.com/poster">online</a> or receive via email instantly!</p>
           <div style="display: flex; width: 100%;">
-            <script async data-uid="0ecbe576ff" src="asset/0ecbe576ff/index.js"></script>
+            <script async data-uid="0ecbe576ff" src="asset/index.js"></script>
           </div>
         </div>
 
@@ -1598,15 +1598,15 @@
 
 
   <!-- Bootstrap core JavaScript -->
-  <script src="asset/vendor/jquery/jquery.min.js"></script>
-  <script src="asset/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="asset/jquery.min.js"></script>
+  <script src="asset/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script src="asset/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="asset/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="asset/js/agency.min.js"></script>
-  <script src="asset/js/portfolio.js"></script>
+  <script src="asset/agency.min.js"></script>
+  <script src="asset/portfolio.js"></script>
 
   <!-- Load d3.js -->
   <script src="asset/d3.v4.min.js"></script>
