--- a/data-analyst/index.html
+++ b/data-analyst/index.html
@@ -842,16 +842,16 @@
           <br><br><br>
           <h2 class="section-heading text-uppercase" style="color: black">Contact</h2>
           <p>Feel free to contact me for any question. For open source projects, please open an issue or pull request on
-            <a href="https://github.com/holtzy/">Github</a>. If you want to follow my work, reach me on <a
-              href="https://twitter.com/R_Graph_Gallery">Twitter</a>. Otherwise, send me an email at <a
-              href="https://www.yan-holtz.com/mailto:yan.holtz.data@gmail.com">yan.holtz.data@gmail.com</a>.</p>
+            <a href="https://github.com/ahmed-store/">Github</a>. If you want to follow my work, reach me on <a
+              href="https://twitter.com/">Twitter</a>. Otherwise, send me an email at <a
+              href="#">ahmedsayed@gmail.com</a>.</p>
           <div style="text-align:center">
             <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
-              href="https://github.com/holtzy/data_to_viz">Github</a>
+              href="https://github.com/ahmed-store/">Github</a>
             <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
-              href="https://twitter.com/R_Graph_Gallery">Twitter</a>
+              href="https://twitter.com/">Twitter</a>
             <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
-              href="https://www.yan-holtz.com/mailto:yan.holtz.data@gmail.com">Mail</a>
+              href="mailto:ahmedsayed@gmail.com">Mail</a>
           </div>
 
         </div>
@@ -911,17 +911,17 @@
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="https://twitter.com/R_Graph_Gallery">
+              <a href="https://twitter.com/">
                 <i class="fa fa-twitter"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/holtzy">
+              <a href="https://github.com/ahmed-store/">
                 <i class="fa fa-github"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/yan-holtz-2477534a/">
+              <a href="https://www.linkedin.com/in/ahmed-mohamed-098a7b1bb/">
                 <i class="fa fa-linkedin"></i>
               </a>
             </li>
@@ -930,10 +930,10 @@
         <div class="col-md-4">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
-              <a href="https://www.yan-holtz.com/#">Privacy Policy</a>
+              <a href="#">Privacy Policy</a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.yan-holtz.com/#">Terms of Use</a>
+              <a href="#">Terms of Use</a>
             </li>
           </ul>
         </div>
