--- a/data-analyst/index.html
+++ b/data-analyst/index.html
@@ -724,7 +724,7 @@
 
   <section id="testimonial">
     <div class="container">
-
+      <h2 class="section-heading text-uppercase">Testimonial</h2>
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner" role="listbox">
 
