--- a/data-analyst/index.html
+++ b/data-analyst/index.html
@@ -724,7 +724,9 @@
 
   <section id="testimonial">
     <div class="container">
-      <h2 class="section-heading text-uppercase">Testimonial</h2>
+      <div class="col-lg-12 text-center">
+      <h2 class="section-heading text-uppercase">Testimonials</h2>
+      </div>
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner" role="listbox">
 
