--- a/data-analyst/index.html
+++ b/data-analyst/index.html
@@ -714,11 +714,6 @@
 
 
 
-
-
-
-
-
   <!-- =========================== REFERENCE SECTION ============================ -->
 
 
@@ -726,6 +721,7 @@
     <div class="container">
       <div class="col-lg-12 text-center">
       <h2 class="section-heading text-uppercase">Testimonials</h2>
+        <hr style="width: 100px; height: 1px; border:none;color:#333;background-color:#333;">
       </div>
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner" role="listbox">
