--- a/data-analyst/index.html
+++ b/data-analyst/index.html
@@ -733,7 +733,7 @@
               </div>
               <div class="col-lg-8 col-md-6 col-sm-6 text-center text-md-left">
                 <br>
-                <p style="color: grey; font-size: 8"><i>"[...] Yan did an absolutely brilliant job. He has multiple
+                <p style="color: grey; font-size: 8"><i>"[...] Ahmed did an absolutely brilliant job. He has multiple
                     skills and qualities making him a great data science project member, and even leader : excellent
                     knowledge and learning ability of diverse statistical and data management tools obviously, and a
                     real knack for data viz."</i></p>
@@ -751,7 +751,7 @@
               </div>
               <div class="col-lg-8 col-md-6 col-sm-6 text-center text-md-left">
                 <br>
-                <p style="color: grey; font-size: 8"><i>"Yan always performed with outstanding skills and impressive
+                <p style="color: grey; font-size: 8"><i>"Ahmed always performed with outstanding skills and impressive
                     capacity for adaptation and efficiency. His job was crucial for the publication of important
                     results. [...] I thus highly recommend him for any work concering framing and analysis of huge data
                     sets."</i></p>
@@ -769,8 +769,8 @@
               </div>
               <div class="col-lg-8 col-md-6 col-sm-6 text-center text-md-left">
                 <br>
-                <p style="color: grey; font-size: 8"><i>"I worked with Yan for several collaborative projects on genomic
-                    data analysis. Yan was very efficient and highly reactive to our requests and he was also autonomous
+                <p style="color: grey; font-size: 8"><i>"I worked with Ahmed for several collaborative projects on genomic
+                    data analysis. Ahmed was very efficient and highly reactive to our requests and he was also autonomous
                     to find the best solutions to the problems we submitted to him."</i></p>
                 <p><a href="https://www.researchgate.net/profile/Jacques_David4">S. Glémin</a> - <span
                     style="font-size: 12px; display: inline;"><i>Senior Researcher at <a
@@ -786,7 +786,7 @@
               </div>
               <div class="col-lg-8 col-md-6 col-sm-6 text-center text-md-left">
                 <br>
-                <p style="color: grey; font-size: 8"><i>"Yan has taught me everything I know about data visualization!
+                <p style="color: grey; font-size: 8"><i>"Ahmed has taught me everything I know about data visualization!
                     He taught my group how to display data in clever ways, and has been responsible for our recent
                     interactive website related to psychiatric epidemiology.<br><br>Also, he is a super-fast and
                     efficient bioinformatician. He has set up a pipeline to handle large genetic datasets and apply
@@ -801,11 +801,11 @@
 
         </div>
 
-        <a class="carousel-control-prev" href="https://www.yan-holtz.com/#carouselExampleIndicators" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="https://www.yan-holtz.com/#carouselExampleIndicators" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
