--- a/data-analyst/index.html
+++ b/data-analyst/index.html
@@ -242,9 +242,9 @@
         <div class="col-lg-4 text-center">
           <a data-toggle="modal" href="#serviceTalking"><i class="fa fa-users services-logo"></i></a>
           <a data-toggle="modal" href="#serviceTalking">
-            <h4>Talking</h4>
+            <h4>Teaching</h4>
           </a>
-          <p>Hire me to talk about programming or data visualization. I ❤️ it!</p>
+          <p>Hire me to give lectures about programming or data visualization. I ❤️ it!</p>
           
         </div>
 
@@ -260,7 +260,7 @@
         <div class="col-lg-4 text-center">
           <a href="https://www.yan-holtz.com/teaching.html"><i class="fa fa-university services-logo"></i></a>
           <a href="https://www.yan-holtz.com/teaching.html">
-            <h4>Teaching & Training</h4>
+            <h4>Courses</h4>
           </a>
           <p>Short talks or multi-day courses on dataviz, R, ggplot2, data analytics and more. </p>
           
