--- a/data-analyst/index.html
+++ b/data-analyst/index.html
@@ -499,7 +499,7 @@
 
 
         <div class="col-md-3 col-sm-6 portfolio-item show column dataviz paper dashboard shiny">
-          <a class="portfolio-link" data-toggle="modal" href="https://www.yan-holtz.com/#ukbGeoApp">
+          <a class="portfolio-link" data-toggle="modal" href="#ukbGeoApp">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <p>Genetics in the UK</p>
@@ -513,7 +513,7 @@
 
 
         <div class="col-md-3 col-sm-6 portfolio-item show column dataviz paper dashboard shiny">
-          <a class="portfolio-link" data-toggle="modal" href="https://www.yan-holtz.com/#genMapComp">
+          <a class="portfolio-link" data-toggle="modal" href="#genMapComp">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <p>Genetic Map Comparator</p>
@@ -529,7 +529,7 @@
 
 
         <div class="col-md-3 col-sm-6 portfolio-item show column dataviz dashboard shiny">
-          <a class="portfolio-link" data-toggle="modal" href="https://www.yan-holtz.com/#terresInovia">
+          <a class="portfolio-link" data-toggle="modal" href="#terresInovia">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <p>Dashboard for Terres Inovia</p>
@@ -544,7 +544,7 @@
 
 
         <div class="col-md-3 col-sm-6 portfolio-item show column dataviz paper shiny">
-          <a class="portfolio-link" data-toggle="modal" href="https://www.yan-holtz.com/#comoProject">
+          <a class="portfolio-link" data-toggle="modal" href="#comoProject">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <p>The Como Project</p>
@@ -558,7 +558,7 @@
         </div>
 
         <div class="col-md-3 col-sm-6 portfolio-item show column dataviz mining">
-          <a class="portfolio-link" data-toggle="modal" href="https://www.yan-holtz.com/#authorRelation">
+          <a class="portfolio-link" data-toggle="modal" href="#authorRelation">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <p>Co-authorship network</p>
@@ -586,7 +586,7 @@
 
 
         <div class="col-md-3 col-sm-6 portfolio-item show column dashboard shiny mining">
-          <a class="portfolio-link" data-toggle="modal" href="https://www.yan-holtz.com/#greenTech">
+          <a class="portfolio-link" data-toggle="modal" href="#greenTech">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <p>GreenTech Challenge</p>
@@ -601,7 +601,7 @@
 
 
         <div class="col-md-3 col-sm-6 portfolio-item show column paper dashboard shiny">
-          <a class="portfolio-link" data-toggle="modal" href="https://www.yan-holtz.com/#unics">
+          <a class="portfolio-link" data-toggle="modal" href="#unics">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <p>UNICS</p>
@@ -630,7 +630,7 @@
 
 
         <div class="col-md-3 col-sm-6 portfolio-item show column mining">
-          <a class="portfolio-link" data-toggle="modal" href="https://www.yan-holtz.com/#surfers">
+          <a class="portfolio-link" data-toggle="modal" href="#surfers">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <p>Where Surfers travel</p>
@@ -998,7 +998,7 @@
                     <h6>Contact me</h6>
                     <hr>
                     <span>Tell me more about your project at <a
-                        href="https://www.yan-holtz.com/mailto:yan.holtz.data@gmail.com">yan.holtz.data@gmail.com</a> to see if we can work
+                        href="mailto:ahmedsayed@gmail.com">ahmedsayed@gmail.com</a> to see if we can work
                       together.</span>
                     <div style="margin-top: 15px;">
                       <a class="btn btn-secondary btn text-uppercase js-scroll-trigger"
@@ -1006,7 +1006,7 @@
                       <a class="btn btn-secondary btn text-uppercase js-scroll-trigger"
                         href="https://twitter.com/R_Graph_Gallery">Twitter</a>
                       <a class="btn btn-secondary btn text-uppercase js-scroll-trigger"
-                        href="https://www.yan-holtz.com/mailto:yan.holtz.data@gmail.com">Mail</a>
+                        href="mailto:ahmedsayed@gmail.com">Mail</a>
                     </div>
                     <br><br><br>
                   </div>
@@ -1061,15 +1061,14 @@
                     <h6>Contact me</h6>
                     <hr>
                     <span>Tell me more about your project at <a
-                        href="https://www.yan-holtz.com/mailto:yan.holtz.data@gmail.com">yan.holtz.data@gmail.com</a> to see if we can work
-                      together.</span>
+                        href="mailto:ahmedsayed@gmail.com">ahmedsayed@gmail.com</a> to see if we can work together.</span>
                     <div style="margin-top: 15px;">
                       <a class="btn btn-secondary btn text-uppercase js-scroll-trigger"
                         href="https://github.com/holtzy/data_to_viz">Github</a>
                       <a class="btn btn-secondary btn text-uppercase js-scroll-trigger"
                         href="https://twitter.com/R_Graph_Gallery">Twitter</a>
                       <a class="btn btn-secondary btn text-uppercase js-scroll-trigger"
-                        href="https://www.yan-holtz.com/mailto:yan.holtz.data@gmail.com">Mail</a>
+                        href="mailto:ahmedsayed@gmail.com">Mail</a>
                     </div>
                     <br><br><br>
                   </div>
@@ -1117,22 +1116,21 @@
                         research results on mental disorders comorbidity.</li>
                       <li><a href="https://www.data-to-viz.com">Data to viz</a>: a decision tree leading to the most
                         appropriate chart type for your data.</li>
-                      <li>See many more examples in the <a href="https://www.yan-holtz.com/#portofolio" target="_blank">portfolio</a> section of
+                      <li>See many more examples in the <a href="#portofolio" target="_blank">portfolio</a> section of
                         this website.</li>
                     </ul>
                     <br>
                     <h6>Contact me</h6>
                     <hr>
                     <span>Tell me more about your project at <a
-                        href="https://www.yan-holtz.com/mailto:yan.holtz.data@gmail.com">yan.holtz.data@gmail.com</a> to see if we can work
-                      together.</span>
+                        href="mailto:ahmedsayed@gmail.com">ahmedsayed@gmail.com</a> to see if we can work together.</span>
                     <div style="margin-top: 15px;">
                       <a class="btn btn-secondary btn text-uppercase js-scroll-trigger"
                         href="https://github.com/holtzy/data_to_viz">Github</a>
                       <a class="btn btn-secondary btn text-uppercase js-scroll-trigger"
                         href="https://twitter.com/R_Graph_Gallery">Twitter</a>
                       <a class="btn btn-secondary btn text-uppercase js-scroll-trigger"
-                        href="https://www.yan-holtz.com/mailto:yan.holtz.data@gmail.com">Mail</a>
+                        href="mailto:ahmedsayed@gmail.com">Mail</a>
                     </div>
                     <br><br><br>
                   </div>
@@ -1401,16 +1399,16 @@
                     <p>Google Scholar is a service that provides any researchers list of publication. I made a script
                       that harvest this information on the web using <code>R</code>. It then take the list of all
                       co-authors and check for each pair if they have published a paper together.</p>
-                    <p>The network information is then visualized using <a href="https://www.yan-holtz.com/">static graphs</a> with R, and also
-                      using <a href="https://www.yan-holtz.com/">interactive version</a> thanks to d3.js</p>
+                    <p>The network information is then visualized using <a href="#">static graphs</a> with R, and also
+                      using <a href="#">interactive version</a> thanks to d3.js</p>
                     <a href="https://www.data-to-viz.com/graph/arc.html">
                       <center><img src="https://www.yan-holtz.com/img/portfolio/researchNet.png" width="80%"></img></center>
                     </a>
                     <h6>Read more</h6>
                     <hr>
-                    <span>Data mining part of the pipeline is available on <a href="https://www.yan-holtz.com/">github</a>. Visualizations are
-                      used as example in my other projects: static charts in <a href="https://www.yan-holtz.com/">data to viz</a>, interactive
-                      ones in the <a href="https://www.yan-holtz.com/">d3 graph gallery</a>.</span>
+                    <span>Data mining part of the pipeline is available on <a href="#">github</a>. Visualizations are
+                      used as example in my other projects: static charts in <a href="#">data to viz</a>, interactive
+                      ones in the <a href="#">d3 graph gallery</a>.</span>
                     <br><br><br>
                   </div>
                 </div>
