--- a/data-analyst/index.html
+++ b/data-analyst/index.html
@@ -258,8 +258,8 @@
         </div>
 
         <div class="col-lg-4 text-center">
-          <a href="https://www.yan-holtz.com/teaching.html"><i class="fa fa-university services-logo"></i></a>
-          <a href="https://www.yan-holtz.com/teaching.html">
+          <a href="#teaching"><i class="fa fa-university services-logo"></i></a>
+          <a href="#teaching">
             <h4>Teaching</h4>
           </a>
           <p>Short talks or multi-day courses on dataviz, R, ggplot2, data analytics and more. </p>
