--- a/data-analyst/index.html
+++ b/data-analyst/index.html
@@ -286,7 +286,7 @@
           <h3 class="section-subheading text-muted text-center" style="max-width: 600px; line-height: 27px; margin-bottom: -30px;">"Dataviz Universe" is my newsletter where I share my latest dataviz updates. If you like charts, you will love my tips and tricks!</h3>
         </div>
         <div style="display: flex; justify-content: center; width: 100%;">
-          <script async data-uid="0ecbe576ff" src="asset/index.js"></script>
+          <!--  <script async data-uid="0ecbe576ff" src="asset/index.js"></script> -->
         </div>
 
         <!-- Row 2 = all the testimonials -->
@@ -441,7 +441,7 @@
           <p>I've developed a comprehensive <b>classification of chart types</b> based on their required data input format.</p>
           <p>This decision tree is available as a poster, which you can order <a href="https://www.data-to-viz.com/poster">online</a> or receive via email instantly!</p>
           <div style="display: flex; width: 100%;">
-            <script async data-uid="0ecbe576ff" src="asset/index.js"></script>
+<!--             <script async data-uid="0ecbe576ff" src="asset/index.js"></script> -->
           </div>
         </div>
 
