--- a/data-analyst/index.html
+++ b/data-analyst/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ahmed El-Sayed | Data - Science - Visualisation</title>
+  <title>Ahmed El-Sayed | Senior Data Engineer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description"
     content="Welcome to Ahmed El-Sayed's homepage. I'm a I'm a data analysis and visualisation enthousiast with a background in biology.">
@@ -114,7 +114,7 @@
         </li>
       </ul>
       <br><br>
-      <p>👋 Hi! I'm a freelance <b>senior software engineer</b> specializing
+      <p>👋 Hi! I'm a freelance <b>senior data engineer</b> specializing
         in <b>data visualization</b>. I worked for prestigious research centers
         and top-tier companies. I've also developed extensive <b>educational content</b> that you might benefit from. ❤️</p>
       <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#blog">subscribe</a>
