--- a/data-analyst/index.html
+++ b/data-analyst/index.html
@@ -114,7 +114,7 @@
         </li>
       </ul>
       <br><br>
-      <p>👋 Hi! I'm a freelance <b>senior data engineer</b> specializing
+      <p>👋 Hi! I'm a freelance <b>Senior Data Engineer</b> specializing
         in <b>data visualization</b>. I worked for prestigious research centers
         and top-tier companies. I've also developed extensive <b>educational content</b> that you might benefit from. ❤️</p>
       <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#blog">subscribe</a>
